@@ -37,7 +37,9 @@ Enumerates, by backtracking, the properties associated with the defined objects.
 <dl>
 	<dt>Object is neither a variable nor a valid object identifier:</dt>
 		<dd><code>type_error(object_identifier, Object)</code></dd>
-	<dt>Property is neither a variable nor a valid object property:</dt>
+	<dt>Property is neither a variable nor a callable term:</dt>
+		<dd><code>type_error(callable, Property)</code></dd>
+	<dt>Property is a callable term but not a valid object property:</dt>
 		<dd><code>domain_error(object_property, Property)</code></dd>
 </dl>
 
@@ -48,7 +50,7 @@ Enumerates, by backtracking, the properties associated with the defined objects.
 <div class="footer">
 	<div class="copyright">
 		<span>Copyright &copy; <a href="mailto:pmoura@logtalk.org">Paulo Moura</a> &mdash; <a href="http://logtalk.org">Logtalk.org</a></span><br/>	
-		<span>Last updated on: October 26, 2006</span>
+		<span>Last updated on: May 4, 2011</span>
 	</div>
 	<div class="navbottom">
 		<span><a href="category_property2.html">previous</a> | <a href="../../glossary.html">glossary</a> | <a href="protocol_property2.html">next</a></span><br/>
