@@ -37,7 +37,9 @@
 <dl>
 	<dt>Protocol is neither a variable nor a valid protocol identifier:</dt>
 		<dd><code>type_error(protocol_identifier, Protocol)</code></dd>
-	<dt>Property is neither a variable nor a valid protocol property:</dt>
+	<dt>Property is neither a variable nor a callable term:</dt>
+		<dd><code>type_error(callable, Property)</code></dd>
+	<dt>Property is a callable term but not a valid protocol property:</dt>
 		<dd><code>domain_error(protocol_property, Property)</code></dd>
 </dl>
 
@@ -48,7 +50,7 @@
 <div class="footer">
 	<div class="copyright">
 		<span>Copyright &copy; <a href="mailto:pmoura@logtalk.org">Paulo Moura</a> &mdash; <a href="http://logtalk.org">Logtalk.org</a></span><br/>	
-		<span>Last updated on: October 26, 2006</span>
+		<span>Last updated on: May 4, 2011</span>
 	</div>
 	<div class="navbottom">
 		<span><a href="object_property2.html">previous</a> | <a href="../../glossary.html">glossary</a> | <a href="../index.html#builtins">next</a></span><br/>
